# medical-cyber-sllm-benchmark

./: .gitignore  CITATION.cff  LICENSE-DATA  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-lock.txt
configs/: analysis.json  autonomous_prompt_contract.json  conditions.json  evaluation_matrix.jsonl  models.lock.json  output_schema.json  prompt_contract.md  retrieval_contract.json  runtime.lock.json
docs/: data_dictionary.md  model_execution.md  reference_standard.md  reproducibility.md  safety_scope.md  statistical_analysis.md  study_design.md
figures/: README.md  figure_manifest.json
metadata/: data_availability.md  mixed_effects_provenance.json  prediction_provenance.json  release_manifest.json  release_notes.md
results/: README.md  article_comparisons.csv  condition_summary.csv  retrieval_window_recall.csv  statistical_results.json  subgroup_results.csv
schemas/: autonomous_canonical_plan.schema.json  autonomous_planner_draft.schema.json  final_prediction.schema.json  mixed_effects_analysis_report.schema.json
scripts/: build_evaluation_matrix.py  build_figure_manifest.py  build_publication_tables.py  reproduce_analysis.py  reproduce_mixed_effects.py  run_mixed_effects.py  score_predictions.py  update_manifest.py  verify_release.py
supplement/: README.md  table_s1_stratum_metrics.csv  table_s2_model_sensitivity.csv  table_s3_resource_use.csv
tables/: README.md  table1a_scenario_composition.csv  table1b_model_configurations.csv  table2_performance.csv  table3_comparisons.csv
tests/: test_analysis.py  (+6 more)
(+587 files in other folders)
